--- a/Angular assignments/Assignment6/EmployeeManagement/src/app/app.component.html
+++ b/Angular assignments/Assignment6/EmployeeManagement/src/app/app.component.html
@@ -1,5 +1,5 @@
 
-
+<h1>Employee Management</h1>
 <table>
   <caption>Employee table</caption>
   <tr>
@@ -60,5 +60,12 @@
    border-collapse: collapse;
    background-color: aliceblue;
    padding: 8px;
+   text-align: center;
+   margin-left: 650px;
+  }
+
+  h1{
+    margin-left: 750px;
   }
  </style>
+ 
