--- a/Angular assignments/Assignment 10-14th Aug/EmployeeManage4/src/app/app.component.html
+++ b/Angular assignments/Assignment 10-14th Aug/EmployeeManage4/src/app/app.component.html
@@ -1,7 +1,7 @@
 <h2>Welcome Home!</h2>
 <br>
 <app-employee-home></app-employee-home>
-<app-department-home></app-department-home>
+<!-- <app-department-home></app-department-home> -->
 <router-outlet></router-outlet>
 
 <style>
