--- a/Angular assignments/Assignment 10-14th Aug/EmployeeManage4/src/app/department/department-details/department-details.component.html
+++ b/Angular assignments/Assignment 10-14th Aug/EmployeeManage4/src/app/department/department-details/department-details.component.html
@@ -4,7 +4,7 @@
     <p>Department Manager: {{deptDetails?.deptManager}}</p>
 </div>
 
-<button (click)="change()">Back</button>
+<button (click)=" backToDept()">Back</button>
 
 <style>
     div{
