--- a/Angular assignments/Assignment 10-14th Aug/EmployeeManage4/src/app/employee-home/employee-home.component.html
+++ b/Angular assignments/Assignment 10-14th Aug/EmployeeManage4/src/app/employee-home/employee-home.component.html
@@ -1,2 +1,3 @@
 <button (click)="backToHome()">Home</button>
 <button (click)="onEmployeeClick()">Employee</button>
+<button (click)="onDeptClick()">Department</button>
