--- a/Angular assignments/Assignment 10-14th Aug/EmployeeManage4/src/app/employee/employee-details/employee-details.component.html
+++ b/Angular assignments/Assignment 10-14th Aug/EmployeeManage4/src/app/employee/employee-details/employee-details.component.html
@@ -8,7 +8,7 @@
     <p>Country: {{detailsOfEmp?.country}}</p>
 </div>
 
-<button (click)="change()">Back</button>
+<button (click)="backToEmplist()">Back</button>
 
 <style>
     div{
