--- a/Angular assignments/Assignment11/EmployeeManage4/src/app/addemployee/addemployee.component.html
+++ b/Angular assignments/Assignment11/EmployeeManage4/src/app/addemployee/addemployee.component.html
@@ -23,3 +23,41 @@
     <br>
     <button type="submit">Add Employee</button>
 </form>
+
+
+
+<!-- Display validation errors for the firstName control -->
+<!-- <div *ngIf="empForm?.get('firstName')?.invalid ">
+  <div *ngIf="empForm?.get('firstName')?.errors?.['required']">
+    First name is required
+  </div>
+  <div *ngIf="empForm?.get('firstName')?.errors?.['minlength']">
+    First name should be longer than 5 characters
+  </div>
+</div> -->
+
+
+<div *ngIf="empForm?.get('firstName')?.errors?.['required']">
+    First name is required
+</div>
+
+<div *ngIf="empForm?.get('firstName')?.errors?.['minlength']">
+    First name should be longer than 5 characters
+</div>
+
+<div *ngIf="empForm?.get('lastName')?.errors?.['required']">
+    Last name is required
+</div>
+
+<div *ngIf="empForm?.get('dateOfBirth')?.errors?.['required']">
+    DOB is required
+</div>
+
+<div *ngIf="empForm?.get('dateOfJoining')?.errors?.['required']">
+    DOJ is required
+</div>
+
+<div *ngIf="empForm?.get('country')?.errors?.['required']">
+    Country is required
+</div>
+
