--- a/Angular assignments/Assignment12/EmployeeManage4/src/app/employee/employee-name/employee-name.component.html
+++ b/Angular assignments/Assignment12/EmployeeManage4/src/app/employee/employee-name/employee-name.component.html
@@ -23,8 +23,13 @@
 <button (click)="addNewEmployee()">Add new Employee</button>
 <br>
 <br>
-<br>
 <button (click)="searchEmployee()">Search Employee</button>
+<br>
+<br>
+<button (click)="updateEmployee()">Update Employee</button>
+<br>
+<br>
+<button (click)="deleteEmployee()">Delete Employee</button>
 <style>
     table,th,td{
         border: 1px solid black;
